locust/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust-master-deployment
  labels:
    app.kubernetes.io/component: locust
    app.kubernetes.io/name: locust-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: locust
      app.kubernetes.io/name: locust-master
  template:
    metadata:
      labels:
        app.kubernetes.io/component: locust
        app.kubernetes.io/name: locust-master
    spec:
      hostAliases: 
        - hostnames: 
          - "app.example.io"
          ip: "169.150.0.80" 
      containers:
        - name: locust-master
          image: locustio/locust:2.26.0
          args:
            - "--master"
            - "--config"
            - "/locust/locust.conf"
          ports:
            - name: http
              containerPort: 8089
              protocol: TCP
            - name: remote
              containerPort: 5557
              protocol: TCP
          volumeMounts:
            - name: locust-config-volume
              mountPath: /locust/
      volumes:
        - name: locust-config-volume
          configMap:
            defaultMode: 420
            name: locust-conf
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust-worker-deployment
  labels:
    app.kubernetes.io/component: locust
    app.kubernetes.io/name: locust-worker
spec:
  replicas: 10
  selector:
    matchLabels:
      app.kubernetes.io/component: locust
      app.kubernetes.io/name: locust-worker
  template:
    metadata:
      labels:
        app.kubernetes.io/component: locust
        app.kubernetes.io/name: locust-worker
    spec:
      hostAliases: 
        - hostnames: 
          - "app.example.io"
          ip: "169.150.0.80"
      containers:
        - name: locust-worker
          image: locustio/locust:2.26.0
          args:
            - "--worker"
            - "--master-host"
            - "locust-service.locust"
            - "-f"
            - "/locust/locustfile.py"
          volumeMounts:
            - name: locust-config-volume
              mountPath: /locust/
      volumes:
        - name: locust-config-volume
          configMap:
            defaultMode: 420
            name: locust-conf
