locust/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: locust-service
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    - port: 5557
      targetPort: remote
      protocol: TCP
      name: remote
  selector:
    app.kubernetes.io/component: locust
    app.kubernetes.io/name: locust-master
