locust/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: locust-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout http_502 http_503 http_504"
    external-dns.alpha.kubernetes.io/ingress-hostname-source: annotation-only
    external-dns.alpha.kubernetes.io/hostname: locust.example.io
spec:
  ingressClassName: traefik
  rules:
    - host: locust.example.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: locust-service
                port:
                  number: 80
